--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    perspective: 1000px;
 }
 .container{
 
@@ -19,6 +20,7 @@ body{
     justify-content: center;
 }
 .card{
+    transform-style: preserve-3d;
     min-height: 85vh;
     width: 35rem;
     border-radius: 30px;
@@ -36,6 +38,7 @@ body{
 .sneaker img{
     width: 20rem;
     z-index:2;
+    transition: all 0.75s ease-out;
 }
 .circle{
     width: 15rem;
@@ -44,4 +47,48 @@ body{
     position: absolute;
     border-radius: 50%;
     z-index: 1;
+}
+.info h1{
+    font-size: 3rem;
+    transition: all 0.75s ease-out;
+}
+.info h3{
+    font-size: 1.3rem;
+    padding: 2rem 0rem;
+    color: #585858;
+    font-weight: lighter;
+    transition: all 0.75s ease-out;
+}
+.sizes{
+    display: flex;
+    justify-content: space-between;
+    transition: all 0.75s ease-out;
+}
+.sizes button{
+    padding: 0.5rem 2rem;
+    background: none;
+    border: none;
+    cursor: pointer;
+    box-shadow: 0px 5px 10px rgba(0,0,0,0.2);
+    border-radius: 30px;
+    font-weight: bold;
+    color: #585858;
+}
+button.active{
+    background: #585858;
+    color: white;
+}
+.purchase{
+    margin-top: 5rem;
+}
+.purchase button{
+    width: 100%;
+    padding:1rem 0rem;
+    background:#F54642 ;
+    color: white;
+    font-weight: bolder;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: all 0.75s ease-out;
 }
